src/beta/main/grammars/param/Param.bnf
{
    parserClass="com.flipperplz.enfusionWorkbench.languages.param.parser.ParamParser"

    extends="com.flipperplz.enfusionWorkbench.languages.param.psi.impl.ParamElementImpl"
    implements="com.flipperplz.enfusionWorkbench.languages.param.psi.ParamElement"

    psiClassPrefix="GeneratedParam"
    psiImplClassSuffix="impl"
    psiPackage="com.flipperplz.enfusionWorkbench.languages.param.psi"
    psiImplPackage="com.flipperplz.enfusionWorkbench.languages.param.psi.impl"

    elementTypeHolderClass="com.flipperplz.enfusionWorkbench.languages.param.psi.ParamTypes"
    elementTypeClass="com.flipperplz.enfusionWorkbench.languages.param.psi.required.ParamElementType"
    tokenTypeClass="com.flipperplz.enfusionWorkbench.languages.param.psi.required.ParamTokenType"

    tokens = [
        SINGLE_LINE_COMMENT      = 'regexp://.*$';
        EMPTY_DELIMITED_COMMENT  = 'regexp:/\*\*?/';
        DELIMITED_COMMENT        = 'regexp:/\*([^*]|[\r\n]|(\*+([^*/]|[\r\n])))*\*+/'
        OP_ASSIGN                = '=';
        OP_ADDASSIGN             = '+=';
        OP_SUBASSIGN             = '-=';
        KW_CLASS                 = 'class';
        KW_DELETE                = 'delete';
        KW_ENUM                  = 'enum';
        SYM_LCURLY               = '{';
        SYM_RCURLY               = '}';
        SYM_LSQUARE              = '[';
        SYM_RSQUARE              = ']';
        SYM_SEMI                 = ';';
        SYM_COLON                = ':';
        SYM_COMMA                = ',';

        ABS_IDENTIFIER           = 'regexp:[a-zA-Z_][a-zA-Z0-9_]*';
        ABS_STRING               = 'regexp:^"(?:[^"]|"")*"$';
        ABS_NUMERIC              = 'regexp:(-?[0-9]+(.[0-9]+)?([eE][-+]?[0-9]+)?|0x[a-fA-F0-9]+)';
        ABS_WHITESPACE           = 'regexp:[\s\t\r\n]';

    ]
    generate=[tokenAccessors="yes"]

    extends('paramString|paramNumeric')=literal
    extends('literal|literalArray')=arrayElement

    implements('classDeclaration|file')='com.flipperplz.enfusionWorkbench.languages.param.psi.ParamScope'
    implements('classDeclaration|assignmentStatement|deleteStatement')='com.flipperplz.enfusionWorkbench.languages.param.psi.ParamStatement'
    implements('paramString|paramNumeric')='com.flipperplz.enfusionWorkbench.languages.param.psi.ParamLiteral'
    implements('literal|literalArray')='com.flipperplz.enfusionWorkbench.languages.param.psi.ParamArrayElement'

    mixin('literalArray')='com.flipperplz.enfusionWorkbench.languages.param.psi.impl.mixins.ParamArrayMixin'
    mixin('assignmentStatement')='com.flipperplz.enfusionWorkbench.languages.param.psi.impl.mixins.ParamAssignmentMixin'
    mixin('classDeclaration')='com.flipperplz.enfusionWorkbench.languages.param.psi.impl.mixins.ParamClassMixin'
    mixin('deleteStatement')='com.flipperplz.enfusionWorkbench.languages.param.psi.impl.mixins.ParamDeleteMixin'
    mixin('identifier')='com.flipperplz.enfusionWorkbench.languages.param.psi.impl.mixins.ParamIdentifierMixin'
    mixin('paramNumeric')='com.flipperplz.enfusionWorkbench.languages.param.psi.impl.mixins.ParamNumericMixin'
    mixin('paramString')='com.flipperplz.enfusionWorkbench.languages.param.psi.impl.mixins.ParamStringMixin'
}

file ::= statement* enumDeclaration? { pin=1 }

classDeclaration ::= KW_CLASS identifier regularClassDecl? { pin=2 }

assignmentStatement ::= identifier (arrayAssignment | valueAssignment) { pin=1 }

deleteStatement ::= KW_DELETE identifier  { pin=2 }

paramNumeric ::= ABS_NUMERIC
paramString ::= ABS_STRING
identifier ::= ABS_IDENTIFIER

literalArray ::= SYM_LCURLY (arrayElement (SYM_COMMA (arrayElement | &SYM_RCURLY))*)? SYM_RCURLY { pin(".*")=1 }

enumDeclaration ::= KW_DELETE SYM_LCURLY [enumValue+] SYM_RCURLY SYM_SEMI { pin=2 }
statement ::= (classDeclaration | deleteStatement | assignmentStatement) SYM_SEMI {  pin=1 }
enumValue ::= identifier (OP_ASSIGN paramNumeric)? { pin=1 }

literal ::= paramString | paramNumeric

arrayElement ::= literal | literalArray

private arrayAssignment ::= SYM_LSQUARE SYM_RSQUARE (
        OP_ASSIGN  |
        OP_ADDASSIGN |
        OP_SUBASSIGN
    ) literalArray { pin=3 };

private valueAssignment ::= OP_ASSIGN literal { pin=1 };

private regularClassDecl ::= (SYM_COLON identifier)? SYM_LCURLY statement* SYM_RCURLY {pin=2 }
